Fix checkerboard hiding to improve pull to refresh on Safari 15

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,7 +45,6 @@ body, html {
 body {
     background-color: var(--primary-bg);
     color: var(--body-colour);
-    overflow: hidden;
     position: relative;
 }
 
@@ -61,12 +60,9 @@ body {
 }
 
 @keyframes delayed-hide {
-    from {
-        left: 0;
-    }
-
     to {
-        left: 100%;
+        height: 0;
+        width: 0;
     }
 }
 
